Ubercart Addresses 6.x-2.x, xxxx-xx-xx
------------------------------
- Issue #1327148 by MegaChriz: fixed a bug that could result in a fatal
  error when trying to save an user with no addresses.
- by MegaChriz: renamed permissions:
  - "view own default address" has become "view own default addresses".
  - "view default addresses" has become "view everyone's default addresses".
- by MegaChriz: API change in the field handler API. The strings array is
  removed from the field definition. Instead, extra properties can be
  defined. In field handlers, getString() is replaced by getProperty().
- Issue #396342 by MegaChriz: added support for getting addresses from
  other sources than the address book. Two new hooks are introduced:
  - hook_uc_addresses_select_addresses()
  - hook_uc_addresses_select_addresses_alter()
- by MegaChriz: added help via hook_help().

Ubercart Addresses 6.x-2.x, 2011-10-16
------------------------------
- Issue #660376 by MegaChriz: Implemented user tokens for default
  addresses.
- Documented used variables in templates.
- Issue #1305348 by gease, MegaChriz: prevent address being saved as user
  data in the user table.
- Issue #1307896 by MegaChriz: implemented default values for fields.
- by MegaChriz: added more documentation.
- Issue #396342 by MegaChriz: Implemented address book in admin order
  interface (partly done).

Ubercart Addresses 6.x-2.x-dev, 2011-10-01
------------------------------
- by MegaChriz: Removed own checkout panes (due to complexity with CA
  triggering).
- by MegaChriz: Increased dependency of Ubercart to Ubercart 2.6.
- by MegaChriz: Implemented order panes (rough version, incomplete).
- by MegaChriz: Implemented tokens for address display.
- by MegaChriz: Replaced address display in invoice with Ubercart
  Addresses version.
- by MegaChriz: added hook hook_uc_addresses_presave().
- by MegaChriz: moved hooks documentation to uc_addresses.api.php.

Ubercart Addresses 6.x-2.x-dev, 2011-09-14