@@ -8,7 +8,7 @@
  * - The address form
  */
 
-/* @group Address Book */
+/* @group Address book */
 .address-book ol {
   list-style-image: none;
   list-style-position: outside;
